--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="logo-nav">
           <a href="#0" class="logo">
-            <img src="https://netology-code.github.io/html-2-diploma/sources/images/noemi-logo.svg" alt="Noem" width="179">
+            <img src="svg/noemi-logo.svg" alt="Noem" width="179">
           </a>
           <nav class="main-header-nav">
             <ul class="site-navigation">
@@ -100,7 +100,7 @@
       <div class="main-aside">
         <main class="posts">
           <article class="posts-item">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg" width="381" alt="Мужчина на рассвете на пляже" class="posts-image">
+              <img src="images/last-post1.jpg" width="381" alt="Мужчина на рассвете на пляже" class="posts-image">
             <div class="posts-content">
               <header class="posts-header">
                 <ul class="posts-chapter-list">
@@ -123,7 +123,7 @@
             </div>
           </article>
           <article class="posts-item-2">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post2.jpg" width="381" alt="Девушка занимается йогой на пляже на фоне моря" class="posts-image">
+              <img src="images/last-post2.jpg" width="381" alt="Девушка занимается йогой на пляже на фоне моря" class="posts-image">
             <div class="posts-content">
               <header class="posts-header">
                 <ul class="posts-chapter-list">
@@ -146,7 +146,7 @@
             </div>
           </article>
           <article class="posts-item-3">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post3.jpg" width="381" alt="Девушка на музыкальном фестивале" class="posts-image">
+              <img src="images/last-post3.jpg" width="381" alt="Девушка на музыкальном фестивале" class="posts-image">
             <div class="posts-content">
               <header class="posts-header">
                 <ul class="posts-chapter-list">
@@ -168,7 +168,7 @@
             </div>
           </article>
           <article class="posts-item-4">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post4.jpg" width="381" alt="Накрытый обеденный стол" class="posts-image">
+              <img src="images/last-post4.jpg" width="381" alt="Накрытый обеденный стол" class="posts-image">
             <div class="posts-content">
               <header class="posts-header">
                 <ul class="posts-chapter-list">
@@ -191,7 +191,7 @@
             </div>
           </article>
           <article class="posts-item">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post5.jpg" width="381" alt="Подушка с принтом" class="posts-image">
+              <img src="images/last-post5.jpg" width="381" alt="Подушка с принтом" class="posts-image">
             <div class="posts-content">
               <header class="posts-header">
                 <ul class="posts-chapter-list">
@@ -241,7 +241,7 @@
             </div>
           </article>
           <article class="posts-item">
-              <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post4.jpg" width="381" alt="Накрытый обеденный стол" class="posts-image">
+              <img src="images/last-post4.jpg" width="381" alt="Накрытый обеденный стол" class="posts-image">
             <div class="posts-content">
               <header class="posts-header">
                 <ul class="posts-chapter-list">
