--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MQ_Diplom</title>
+    <title>MQ-Diplom</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -41,11 +41,11 @@
  
       <section class="trends">
         <div class="section-trends-wrapper">
-          <h2 class="trends_title">сейчас в тренде</h2>
-          <div class="cards_trends_container">
+          <h2 class="trends-title">сейчас в тренде</h2>
+          <div class="cards-trends-container">
             <div class="trend-card trend-card1">
-              <div class="content_card_trend">
-                <ul class="more_trend">
+              <div class="content-card-trend">
+                <ul class="more-trend">
                   <li class="more-list">
                     <a class="more-link" href="#0">lifestyle</a>
                   </li>
@@ -53,22 +53,22 @@
                     <a class="more-link" href="#0">interior</a>
                   </li>
                 </ul>
-                <h2 class="card_trend_title"><a href="#0" class="card_trend_title">сейчас в тренде: сад на подоконнике</a></h2>
+                <h2 class="card-trend-title"><a href="#0" class="card-trend-title">сейчас в тренде: сад на подоконнике</a></h2>
               </div>
             </div>
             <div class="trend-card trend-card2">
-              <div class="content_card_trend">
-                <ul class="more_trend">
+              <div class="content-card-trend">
+                <ul class="more-trend">
                   <li class="more-list">
                     <a class="more-link" href="#0">food</a>
                   </li>
                 </ul>
-                <h2 class="card_trend_title"><a href="#0" class="card_trend_title">сыры на красивых картинках из интернета: какие они на вкус?</a></h2>
+                <h2 class="card-trend-title"><a href="#0" class="card-trend-title">сыры на красивых картинках из интернета: какие они на вкус?</a></h2>
               </div>
             </div>
             <div class="trend-card trend-card3">
-              <div class="content_card_trend">
-                <ul class="more_trend">
+              <div class="content-card-trend">
+                <ul class="more-trend">
                   <li class="more-list">
                     <a class="more-link" href="#0">lifestyle</a>
                   </li>
@@ -76,12 +76,12 @@
                     <a class="more-link" href="#0">travel</a>
                   </li>
                 </ul>
-                <h2 class="card_trend_title"><a href="#0" class="card_trend_title">собираемся в первый поход в горы</a></h2>
+                <h2 class="card-trend-title"><a href="#0" class="card-trend-title">собираемся в первый поход в горы</a></h2>
               </div>
             </div>
             <div class="trend-card trend-card4">
-              <div class="content_card_trend">
-                <ul class="more_trend">
+              <div class="content-card-trend">
+                <ul class="more-trend">
                   <li class="more-list">
                     <a class="more-link" href="#0">food</a>
                   </li>
@@ -89,7 +89,7 @@
                     <a class="more-link" href="#0">health</a>
                   </li>
                 </ul>
-                <h2 class="card_trend_title"><a href="#0" class="card_trend_title">сейчас в тренде: сколько витамина с в лимонах?</a></h2>
+                <h2 class="card-trend-title"><a href="#0" class="card-trend-title">сейчас в тренде: сколько витамина с в лимонах?</a></h2>
               </div>
             </div>
           </div>
@@ -265,7 +265,7 @@
           </article>
         </main>
       
-        <aside class="right_column">
+        <aside class="right-column">
           <section class="side-items">
             <h3 class="side-header">Новые посты</h3>
               <article class="side-item-1">
