--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img src="svg/noemi-logo.svg" alt="Noem">
           </a>
           <nav class="main-header-nav">
-            <button class="menu_button js_menu_button">
-              <span class="menu_button_lable">Открыть меню</span>
+            <button class="menu-button js-menu-button">
+              <span class="menu-button-lable">Открыть меню</span>
             </button>
             <ul class="site-navigation">
               <li class="site-navigation-item">
